# ArchHub

./: .cursorrules  .gitattributes  .gitignore  .graphifyignore  AGENTS.md  Build-Installer.bat  BuildRevit2023.bat  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  CleanRevitAddin.bat  DEVELOPMENT_LOG.md  Diagnose.bat  FixAndTestRevit2025.bat  Install.bat  Install.vbs  LICENSE  Launch.bat  NOTICE.md  QUICKSTART.md  README.md  ROADMAP.md  Run-Departments-Hidden.vbs  Run-Departments.bat  Run.bat  RunBuild.vbs  RunBuild2024.vbs  RunDebug.bat  SECURITY.md  STRATEGY.md  Setup-Speckle.bat  Stop-Departments.bat  Update.bat  VISION.md  pyproject.toml  requirements.txt
.antigravity/: instructions.md
.codex/: AGENTS.md
.gemini/: GEMINI.md
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  SIGNPATH_APPLICATION.md  dependabot.yml  pull_request_template.md
.telemetry/: README.md  current-implementation.md  current-state.yaml  delta.md  implementation-guide.md  product.md  tracking-plan.yaml
agents/: .gitignore  CLOUD_DEPLOY.md  Dockerfile  README.md  __init__.py  anthropic_client.py  base.py  ceo_routine.py  cloud_runner.py  codex_cli_client.py  codex_client.py  dashboard_endpoint.py  departments.py  deploy.ps1  dispatcher.py  fly.toml  gemini_client.py  github_report_loop.py  hourly_report.py  install_scheduled_task.ps1  lmstudio_client.py  notify.py  ollama.py  openai_client.py  post_report_to_github.py  publish.py  queue.py  recurring.yaml  report_sender.py  requirements.txt  roadmap_dispatcher.py  roadmap_source.py  run.py  scheduler.py  status_report.py  token_meter.py
app/: acad_broker.py  add_host_panel.py  ai_behaviour.py  archhub_mcp_server.py  auto_build.py  bridge.py  build_progress_dialog.py  chat_window.py  cloud_auth.py  cloud_client.py  cloud_sync.py  cloud_usage.py  command_palette.py  company_pets.py  connector_health.py  connector_panel.py  contrast_audit.py  debug_bridge.py  design_tokens.py  detection.py  dev_source_sync.py  do_build_2023.py  do_build_2024.py  feedback_widget.py  first_run.py  grammar_health.py  health_history.py  host_aliases.py  host_detector.py  library.py  library_gate.py  library_persistence.py  library_seeds.py  library_validator.py  llm_detector.py  llm_router.py  local_llm_detector.py  logging_config.py  main.py  manager.py  (+58 more)
cloud_backend/: .env.example  .gitignore  Dockerfile  LIVE-VERIFY-2026-05-28.md  README.md  auth.py  billing.py  brain_replica.py  cockpit_agent.py  companies.py  config.py  db.py  deploy.ps1  email_sender.py  fly.toml  founder_cockpit.py  google_auth.py  main.py  marketplace.py  memory_extractor.py  memory_writer.py  polar.py  proxy.py  requirements.txt
docker-resources/: speckle-compose.yml
docs/: ACCESSIBILITY-AUDIT-2026-05-26.md  AGENTS_AUTONOMOUS_LOOP.md  AI_REASONING_VISUALIZATION_RND_2026-05-15.md  ARCHITECTURE.md  AUDIT_2026-05-14.md  AZURE_SIGNING_QUICKSTART.md  BACKEND_SPEC.md  BILLING_ALTERNATIVES.md  BRAIN.md  BRUTAL_AUDIT_2026-05-14.md  BUILT_MAP.md  CAIQ_LITE.md  CANVAS_PLAN.md  CIVIL_3D_ROADMAP.md  CLOUD_ACCESS.md  CLOUD_API.md  CLOUD_REVIVAL_PLAN.md  CODEX_UI_HANDOFF.md  CODE_SIGNING.md  CONNECTOR_MASTER_PLAN_2026-05-15.md  CONTENT-ECOSYSTEM-2026-05-26.md  COSTS.md  FAILURE_LOG.md  GO_LIVE_CHECKLIST.md  GTM_STRATEGY.md  MULTI_DEVICE.md  NODE_GRAMMAR.md  NODE_INTERACTION_UX_PRINCIPLES_2026-05-15.md  NODE_LIBRARY_v2.md  NODE_RND_2026-05-15.md  NODE_RND_REFRAME_2026-05-15.md  PERF_AUDIT.md  PERMISSIONS.md  PRICING_STATUS.md  REALITY_SMOKE.md  RELEASE_NOTES_v1.6.2.md  RELEASE_NOTES_v1.6.3.md  RELEASE_NOTES_v1.6.md  RELIABILITY.md  REVENUE_MODEL.md  (+16 more)
graphify-out/: GRAPH_REPORT.md
installer/: build.bat  install_gui.ps1  make_shortcuts.ps1  setup.iss  upgrade.ps1
landing/: index.html  security.html
personal-brain-mcp/: HANDOFF.md  README.md  bootstrap.ps1  pyproject.toml
personal-brain-mcp/hooks/: claude-code.json
personal-brain-mcp/src/personal_brain/: __init__.py  acl.py  active_work.py  blob_store.py  brain_facts.py  calibration.py  client_hook.py  cloud_archive.py  cloud_config.py  cloud_login.py  community.py  community_groups.py  court_harness.py  dataset_export.py  decontamination.py  diligence.py  dispatcher.py  embedding.py  embeddings.py  exploration.py  federation.py  federation_server.py  firm.py  free_fleet.py  graph_adapter.py  hlc.py  hybrid_recall.py  installer.py  liveness.py  mcp_core.py  meaning_space.py  models.py  organize.py  owned_server.py  personal_cloud_sync.py  phash.py  privacy.py  projector.py  publish_worker.py  redaction.py  (+14 more)
personal-brain-mcp/tests/: _claim_worker.py  _tree_claim_worker.py  conftest.py  test_acl_redaction.py  test_active_work_db.py  test_backfill_skills.py  test_blob_store.py  test_brain_facts.py  test_brain_migrate.py  test_brain_two_store_unify.py  test_brain_unify.py  test_cloud_archive.py  test_cloud_archive_tool.py  test_community_groups.py  test_community_mcp_tools.py  test_court_unrig.py  test_cross_process_atomicity.py  test_dataset_export.py  test_dataset_export_rights_dam.py  test_decontamination.py  test_diligence.py  test_dispatcher.py  test_doc_links.py  test_driver_end_to_end.py  test_embedding.py  test_embeddings.py  test_engine_on.py  test_export_tiers_v1.py  test_fanout_tools.py  test_federation.py  test_federation_server.py  test_firm.py  test_free_fleet.py  test_hybrid_recall.py  test_installer.py  test_installer_coverage.py  test_learning_consumed.py  test_mcp_core.py  test_mcp_core_http.py  test_meaning_space_retrieval.py  (+28 more)
proof_bbc4/: master.json
relay/: .env.example  .gitignore  HANDOFF.md  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
scripts/: _launch_archhub_cdp.ps1  _sysmem.ps1  agents_smoke.py  build_icon.py  build_installer.ps1  cdp_console_diag.py  cdp_cpu_profile.py  cdp_drag_test.py  cdp_lag_diag.py  cdp_lag_diag2.py  cdp_measure_cold_start.py  cdp_probe_home.py  cdp_verify_host_node_v2_s1.py  check_session_saves.py  diag_revit_dll.ps1  maintenance_audit.py  reality_smoke.py  setup_azure_trusted_signing.ps1  sign_installer.ps1
tests/: conftest.py  test_a11y_apply.py  (+272 more)
(+469 files in other folders)
